trying to fix size on ios

--- a/rubycon.it/assets/css/style.scss
+++ b/rubycon.it/assets/css/style.scss
@@ -48,23 +48,23 @@ section:nth-of-type(even):not(#newsletter){
     animation: bounce 3s infinite;
 }
 .box-logos-imperator a {
-  // width: 200px; 
+  max-width: 350px; 
   height: 150px;
 }
 .box-logos-triumvir a {
-  // width: 180px; 
+  max-width: 300px;
   height: 130px;
 }
 .box-logos-praetor a {
-  // width: 160px; 
+  max-width: 200px; 
   height: 110px;
 }
 .box-logos-quaestor a {
-  // width: 140px; 
+  max-width: 150px; 
   height: 90px;
 }
 .box-logos-community a {
-  // width: 130px; 
+  max-width: 130px; 
   height: 70px;
 }
 @keyframes bounce {
